kvm_api.h

/* Wait for requests without terminating machine. Call this just before
   the end of int main(). It will preserve the state of the whole machine,
   including startup arguments and stack values. Future requests will use
   a new stack, and will not trample the old stack, including red-zone. */
extern void wait_for_requests();
/**
 * When a request arrives the handler function is the only function that will
 * be called. main() is no longer in the picture. Any actions performed during
 * request handling will disappear after the request is processed.
 *
 * We will produce a response using the 'backend_response' function, which will
 * conclude the request.
 *
 * Example:
 *  static void on_get(const char* url, const char *arg, int req, int resp)
 *  {
 *  	const char *ctype = "text/plain";
 *  	const char *cont = "Hello World";
 *  	backend_response(200, ctype, strlen(ctype), cont, strlen(cont));
 *  }
 **/
extern void __attribute__((noreturn, used))
backend_response(int16_t status, const void *t, size_t, const void *c, size_t);
static const int REQUEST  = REQ;
static const int RESPONSE = RESP;
extern long
sys_http_append(int where, const char *, size_t);
extern long
sys_http_set(int where, const char *what, size_t len);
/* Retrieve a header field by key, writing result to outb and returning actual length.
   Returns 0 when outl is too small to hold the value.
   If outb is zero, instead returns the length of header field, or zero if not found. */
extern unsigned
sys_http_find(int where, const char *key, size_t, char *outb, size_t outl);
/**
 * Varnish caching configuration
 *
 **/
/* Set cacheable, ttl, grace and keep. All durations are in milliseconds. */
extern long
sys_set_cacheable(bool cached, long ttl_ms, long grace_ms, long keep_ms);
static inline long set_cacheable(bool cached, float ttl, float grace, float keep)
{
	return sys_set_cacheable(cached, ttl * 1000, grace * 1000, keep * 1000);
}
/* Create a task in storage that is scheduled to run next.
   If start or period is set, the task will be scheduled to run after
   start milliseconds, and then run every period milliseconds. The
   system call returns the timer id.
   If it is a periodic task, it will return a task id. */
typedef void (*storage_task_func) (void *data, size_t len);
/* Schedule a storage task to happen next. It will be queued up for storage access. */
static inline long
storage_task(storage_task_func task, const void *data, size_t len) { return sys_storage_task(task, data, len, 0, 0); }
/* Live-debugging breakpoint. Live-debugging can only be used
   by debug programs. This breakpoint is a no-op for regular
   programs. Debug programs cannot be debugged without a
   breakpoint, as the brekapoint is the single-source of opening
   up for remote GDB debugging. */
extern void sys_breakpoint();
/**
 * TCP-related functions
**/

/**
 * Receive and control a TCP socket file descriptor.
 * This fd can be read from and written to using write().
 * Reading happens automatically outside of the guest, and the read-buffer
 * is presented through the on_read callback.
 * 
 * Register various TCP socket callbacks:
 **/
static inline void set_socket_on_connect(int(*f)(int fd, const char *remote, const char *arg)) { register_func(8, f); }